Refactor DashboardLayout, aggiunta Inbox realtime e aggiornamento asset

--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -25,7 +25,7 @@
 }
 
 .logout-button {
-  background-color: #e74c3c;
+  background-color: #4d63e4;
   color: white;
   border: none;
   border-radius: 5px;
